DX/dev/force-app/main/default/objects/Participant__c/Participant__c.object-meta.xml
<CustomObject>
    <label>参加者</label>
    <nameField>
        <label>参加者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>