DX/dev/force-app/main/default/objects/Participant__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>取引先責任者</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>値が存在しないか、検索条件(取引先名 = のんべえ)に一致しません。アイコンをクリックして値を選択してください。</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>のんべえ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>参加者</relationshipLabel>
    <relationshipName>ContactoJZP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>