DX/dev/force-app/main/default/objects/Participant__c/fields/Cup__c.field-meta.xml
<CustomField>
    <fullName>Cup__c</fullName>
    <label>杯数</label>
    <summarizedField>Record__c.Cup__c</summarizedField>
    <summaryForeignKey>Record__c.ParticipantId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>