DX/dev/force-app/main/default/objects/Participant__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>イベント</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>参加者</relationshipLabel>
    <relationshipName>EventDRYo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>