DX/dev/force-app/main/default/objects/Participant__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>CASE(Cup__c,
    0, ScoreBeforeCumulative__c,
    1, ScoreBeforeCumulative__c,
    2, ScoreBeforeCumulative__c,
    3, ScoreBeforeCumulative__c * 0.7,
    4, ScoreBeforeCumulative__c * 0.7,
       ScoreBeforeCumulative__c * 0.5
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>