DX/dev/force-app/main/default/objects/Participant__c/fields/ScoreBeforeCumulative__c.field-meta.xml
<CustomField>
    <fullName>ScoreBeforeCumulative__c</fullName>
    <label>計算前の得点</label>
    <summarizedField>Record__c.Point__c</summarizedField>
    <summaryForeignKey>Record__c.ParticipantId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>