DX/dev/force-app/main/default/objects/Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Score__c</columns>
    <columns>Cup__c</columns>
    <columns>Payment__c</columns>
    <columns>EventId__c</columns>
    <columns>ScoreBeforeCumulative__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>